<resources>
    <string name="app_name">10 Homework</string>
    <string name="login_password">Введите логин и пароль</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="deal">Я согласен</string>
    <string name="login_button">Вход</string>
    <string name="login_toast">Логин прошел успешно</string>
    <string name="anr">ANR</string>
    <string name="ryzhik">Рыжик</string>
    <string name="barsik">Барсик</string>
    <string name="murzik">Мурзик</string>
    <string name="thomasina">Томасина</string>
    <string name="haze">Дымка</string>
    <string name="masyanya">Масяня</string>
    <string name="kitty">Китти</string>
    <string name="vaska">Васька</string>
</resources>